--- a/StatefulValuesService/.vscode/launch.json
+++ b/StatefulValuesService/.vscode/launch.json
@@ -2,15 +2,16 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (web)",
+            "name":".NET Core Docker Launch (web)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceRoot}/bin/Debug/netcoreapp1.0/StatefulValuesService.dll",
-            "args": [],
-            "cwd": "${workspaceRoot}",
-            "stopAtEntry": false,
-            "internalConsoleOptions": "openOnSessionStart",
+            "preLaunchTask": "composeForDebug",
+            "cwd": "/app",
+            "program": "/app/StatefulValuesService.dll",
+            "sourceFileMap": {
+                "/app": "${workspaceRoot}"
+            },
+
             "launchBrowser": {
                 "enabled": true,
                 "args": "${auto-detect-url}",
@@ -20,23 +21,19 @@
                 },
                 "osx": {
                     "command": "open"
-                },
-                "linux": {
-                    "command": "xdg-open"
                 }
             },
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "sourceFileMap": {
-                "/Views": "${workspaceRoot}/Views"
+
+            "pipeTransport": {
+                "pipeProgram": "/bin/bash",
+                "pipeCwd": "${workspaceRoot}",
+                "pipeArgs": [ "-c", "./dockerTask.sh startDebugging" ],
+                "windows": {
+                    "pipeProgram": "${env.windir}\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
+                    "pipeCwd": "${workspaceRoot}",
+                    "pipeArgs": [ ".\\dockerTask.ps1", "-StartDebugging" ]
+                }
             }
-        },
-        {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach",
-            "processId": "${command.pickProcess}"
         }
     ]
 }
