--- a/StatefulValuesService/docker-compose.debug.yml
+++ b/StatefulValuesService/docker-compose.debug.yml
@@ -6,9 +6,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.debug
-    volumes: 
-     - /tmp/data:/app/data
     ports:
       - "5000:5000"
     environment:
       - REMOTE_DEBUGGING
+  db:
+    image: mongo
