--- a/StatefulValuesService/docker-compose.yml
+++ b/StatefulValuesService/docker-compose.yml
@@ -2,9 +2,13 @@ version: '2'
 
 services:
   statefulvaluesservice:
-    image: jixer/statefulvaluesservice
+    image: jixer/oct2016dcc
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
+    links: 
+      - db
+  db:
+    image: mongo
