--- a/samples/Stateless/.vscode/launch.json
+++ b/samples/Stateless/.vscode/launch.json
@@ -26,12 +26,12 @@
 
             "pipeTransport": {
                 "pipeProgram": "/bin/bash",
-                "pipeCwd": "${workspaceRoot}",
+                "pipeCwd": "${workspaceRoot}/KeyValueService",
                 "pipeArgs": [ "-c", "./dockerTask.sh startDebugging" ],
                 "windows": {
                     "pipeProgram": "${env.windir}\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
-                    "pipeCwd": "${workspaceRoot}",
-                    "pipeArgs": [ ".\\KeyValueService\\dockerTask.ps1", "-StartDebugging" ]
+                    "pipeCwd": "${workspaceRoot}\\KeyValueService\\",
+                    "pipeArgs": [ ".\\dockerTask.ps1", "-StartDebugging" ]
                 }
             }
         }
