--- a/src/KeyValueService/Dockerfile.debug
+++ b/src/KeyValueService/Dockerfile.debug
@@ -7,7 +7,7 @@ RUN curl -SL https://raw.githubusercontent.com/Microsoft/MIEngine/getclrdbg-rele
     && ./GetClrDbg.sh $CLRDBG_VERSION \
     && rm GetClrDbg.sh
 WORKDIR /app
-ENV ASPNETCORE_URLS http://*:5000
-EXPOSE 5000
-ENTRYPOINT ["/bin/bash", "-c", "if [ -z \"$REMOTE_DEBUGGING\" ]; then dotnet StatefulValuesService.dll; else sleep infinity; fi"]
+ENV ASPNETCORE_URLS http://*:3000
+EXPOSE 3000
+ENTRYPOINT ["/bin/bash", "-c", "if [ -z \"$REMOTE_DEBUGGING\" ]; then dotnet KeyValueService.dll; else sleep infinity; fi"]
 COPY . /app
