--- a/samples/DotNetNew/.vscode/tasks.json
+++ b/samples/DotNetNew/.vscode/tasks.json
@@ -3,14 +3,26 @@
     "command": "dotnet",
     "isShellCommand": true,
     "args": [],
-    "tasks": [
-        {
-            "taskName": "build",
-            "args": [
-                "${workspaceRoot}\\project.json"
-            ],
-            "isBuildCommand": true,
-            "problemMatcher": "$msCompile"
-        }
-    ]
+    "windows": {
+        "tasks": [
+            {
+                "taskName": "build",
+                "args": [
+                    "${workspaceRoot}\\project.json"
+                ],
+                "isBuildCommand": true,
+                "problemMatcher": "$msCompile"
+        }]
+    },
+    "osx": {
+        "tasks": [
+            {
+                "taskName": "build",
+                "args": [
+                    "${workspaceRoot}/project.json"
+                ],
+                "isBuildCommand": true,
+                "problemMatcher": "$msCompile"
+        }]
+    }
 }
