Fixed dockerfile and compose file

--- a/src/KeyValueService/Dockerfile
+++ b/src/KeyValueService/Dockerfile
@@ -1,6 +1,11 @@
-FROM microsoft/dotnet:1.0.0-core
+FROM microsoft/dotnet:1.0.0-preview2-sdk
+
+WORKDIR /build/KeyValueService
+COPY . .
+RUN dotnet restore && \
+    dotnet build -c Release -o /app --framework .NETCoreApp,Version=v1.0;
+
 WORKDIR /app
-ENV ASPNETCORE_URLS http://*:3000
-EXPOSE 3000
+ENV ASPNETCORE_URLS http://*:5000
+EXPOSE 5000
 ENTRYPOINT ["dotnet", "KeyValueService.dll"]
-COPY . /app
