--- a/src/KeyValueService/docker-compose.yml
+++ b/src/KeyValueService/docker-compose.yml
@@ -2,13 +2,13 @@ version: '2'
 
 services:
   keyvalueservice:
-    image: jixer/keyvalueservice
+    image: jixer/oct2016dcc
     build:
       context: .
       dockerfile: Dockerfile
     links: 
       - db
     ports:
-      - "3000:3000"
+      - "5000:5000"
   db:
     image: mongo
