Reverting back to data file

--- a/src/KeyValueService/docker-compose.debug.yml
+++ b/src/KeyValueService/docker-compose.debug.yml
@@ -2,15 +2,11 @@ version: '2'
 
 services:
   keyvalueservice:
-    image: jixer/keyvalueservice:debug
+    image: jixer/oct2016dcc:debug
     build:
       context: .
       dockerfile: Dockerfile.debug
-    links: 
-      - db
     ports:
       - "3000:3000"
     environment:
       - REMOTE_DEBUGGING
-  db:
-    image: mongo
