--- a/src/.vscode/tasks.json
+++ b/src/.vscode/tasks.json
@@ -19,7 +19,7 @@
             {
                 "taskName": "compose",
                 "suppressTaskName": true,
-                "args": ["-ExecutionPolicy", "RemoteSigned", ".\\dockerTask.ps1", "-Compose", "-Environment", "test" ],
+                "args": ["-ExecutionPolicy", "RemoteSigned", ".\\dockerTask.ps1", "-Compose", "-Environment", "debug" ],
                 "isBuildCommand": false,
                 "showOutput": "always",
                 "echoCommand": true
@@ -35,7 +35,7 @@
             {
                 "taskName": "runTests",
                 "suppressTaskName": true,
-                "args": ["-ExecutionPolicy", "RemoteSigned", ".\\dockerTask.ps1", "-RunTests", "-Environment", "test" ],
+                "args": ["-ExecutionPolicy", "RemoteSigned", ".\\dockerTask.ps1", "-RunTests", "-Environment", "debug" ],
                 "isBuildCommand": false,
                 "showOutput": "always",
                 "echoCommand": true
@@ -72,7 +72,7 @@
             {
                 "taskName": "runTests",
                 "suppressTaskName": true,
-                "args": [ "-c", "./dockerTask.sh runTests test" ],
+                "args": [ "-c", "./dockerTask.sh runTests debug" ],
                 "isBuildCommand": false,
                 "showOutput": "always"
             }
