--- a/src/KeyValueService/project.json
+++ b/src/KeyValueService/project.json
@@ -15,8 +15,7 @@
     "Microsoft.Extensions.Logging": "1.0.0",
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
-    "MongoDB.Driver": "2.3.0"
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0"
   },
   "tools": {
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
@@ -50,7 +49,8 @@
       "Dockerfile",
       "docker-compose.debug.yml",
       "docker-compose.test.yml",
-      "docker-compose.yml"
+      "docker-compose.yml",
+      "_Data"
     ]
   },
   "scripts": {
