Updating CircleCI file

--- a/circle.yml
+++ b/circle.yml
@@ -1,16 +1,17 @@
 general:
     build_dir: src
 machine:
+    node:
+        version: 0.10.22
     services:
         - docker
 dependencies:
-    override:
-        - npm install --dev Tests
     pre:
         - sudo pip install docker-compose
-        - sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ xenial main" > /etc/apt/sources.list.d/dotnetdev.list'
+        - sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
         - sudo apt-key adv --keyserver apt-mo.trafficmanager.net --recv-keys 417A0893
         - sudo apt-get update
-        - sudo apt-get install dotnet-dev-1.0.0-preview2-003131
-        - npm install Tests
-    
+        - sudo apt-get install dotnet-dev-1.0.0-preview2-003121
+    override:
+        - dotnet restore
+        - npm install --dev Tests
