--- a/circle.yml
+++ b/circle.yml
@@ -3,14 +3,13 @@ general:
 machine:
     node:
         version: 0.10.22
+    pre:
+        - curl -sSL https://s3.amazonaws.com/circle-downloads/install-circleci-docker.sh | bash -s -- 1.10.0
     services:
         - docker
 dependencies:
     pre:
         - sudo pip install docker-compose
-        - sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
-        - sudo apt-key adv --keyserver apt-mo.trafficmanager.net --recv-keys 417A0893
-        - sudo apt-get update
-        - sudo apt-get install dotnet-dev-1.0.0-preview2-003121
-    override:
-        - dotnet restore
+test:
+    post:
+        - ./dockerTask.sh runTests
