Updated compose files

--- a/circle.yml
+++ b/circle.yml
@@ -12,4 +12,4 @@ dependencies:
         - sudo pip install docker-compose
 test:
     post:
-        - ./dockerTask.sh runTests
+        - ./dockerTask.sh runTests release
