Fixed path issue

--- a/src/docker-compose.debug.yml
+++ b/src/docker-compose.debug.yml
@@ -4,7 +4,7 @@ services:
   keyvalueservice:
     image: jixer/keyvalueservice:debug
     build:
-      context: ./keyvalueservice
+      context: ./KeyValueService/
       dockerfile: Dockerfile.debug
     links: 
       - db
