--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   keyvalueservice:
     image: jixer/keyvalueservice
     build:
-      context: ./keyvalueservice
+      context: ./KeyValueService/
       dockerfile: Dockerfile
     links: 
       - db
