--- a/circle.yml
+++ b/circle.yml
@@ -14,5 +14,5 @@ dependencies:
     override:
         - cd Tests; npm install
 test:
-    post:
+    override:
         - ./dockerTask.sh runTests release
