--- a/circle.yml
+++ b/circle.yml
@@ -8,9 +8,5 @@ machine:
 dependencies:
     pre:
         - sudo pip install docker-compose
-        - npm install -g mocha
-    override:
-        - cd Tests; npm install
-test:
-    override:
-        - ./dockerTask.sh runTests release
+    post:
+        - ./dockerTask.sh compose release
