--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,9 @@
 {
   "name": "keyvalueservice",
   "version": "0.0.1",
+  "scripts": {
+    "test": "mocha"
+  },
   "devDependencies": {
     "mocha": "^3.1.0",
     "should": "^11.1.0",
